--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
     </main>
 
     <footer>
-        <form action="" method="post">
-            <input type="text" name="busca" id="ibusca" placeholder="O que deseja encontrar?">
-            <label for="ibusca"></label>
-            <input type="submit" value="Buscar">
-        </form>
+        <div id="oquebuscar">       
+            <form action="" method="post">
+                <input type="text" name="busca" id="ibusca" placeholder="O que deseja encontrar?">
+                <label for="ibusca"></label>
+                <input type="submit" value="Buscar" id="actionbusca" >
+            </form>
+        </div>
     </footer>
 </body>
 </html>
