Updated fullscreen version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MHM</title>
 
     <link rel="stylesheet" href="styles/mobile.css">
+    <link rel="stylesheet" href="styles/fullsize.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -17,6 +18,29 @@
             <span id="hamburguer" class="material-symbols-outlined">
                 menu
                 </span>
+                <ul id="lista">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Moda Masculina </a>
+                    </li>
+                    <li>
+                        <a href="#">Cortes de Cabelo</a>
+                    </li>
+                    <li>
+                        <a href="#">Barba</a>
+                    </li>
+                    <li>
+                        <a href="#">Tênis</a>
+                    </li>
+                    <li>
+                        <a href="#">Perfume</a>
+                    </li>
+                    <li>
+                        <a href="#">Desenvolvimento</a>
+                    </li>
+                </ol>
         </header>
     </header>
 
